--- a/color-match-game/package.json
+++ b/color-match-game/package.json
@@ -37,7 +37,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
   }
