--- a/color-match-game/package.json
+++ b/color-match-game/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "animate.css": "^4.1.1",
+    "canvas-confetti": "^1.9.3",
     "cra-template": "1.2.0",
     "lucide-react": "^0.469.0",
     "react": "^19.0.0",
     "react-confetti": "^6.2.1",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
